--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ thiserror = "1"
 tokio = { version = ">=1.23.1", features = ["macros", "parking_lot", "rt", "sync", "time"] }
 tokio-tungstenite = { version = ">=0.20.1", default-features = false }
 tracing = "0.1"
+wasm-bindgen-futures = "0.4.39"
